# c_http_server

./: .gitignore  CMakeLists.txt
html/: index.html  teste.html
src/: main.c
src/Router/: HtmlFileFolderRead.c  HtmlFileFolderRead.h  Router.c  Router.h
src/Server/: Server.c  Server.h
